# python-init

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.script/: docker-compose.yml  setup.sh
