[project]
name = "python-init"
version = "0.0.0-alpha"
description = "a python proj init"
authors = [
    {name = "DaHuangQwQ",email = "88641334+DaHuangQwQ@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

